your categories bug fix